# VideoActionClassifier

./: Pasted--You-can-now-view-your-Streamlit-app-in-your-browser-URL-http-0-0-0-0-5000-2024-12-03-17-16--1733246532765.txt  Pasted-OSError-facebook-videomae-base-finetuned-kinetics-is-not-a-local-folder-and-is-not-a-valid-model-id-1733246983154.txt  main.py  pyproject.toml  replit.nix  utils.py
.streamlit/: config.toml
