[project]
name = "repl-nix-videoactionclassifier"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "av>=14.0.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "streamlit>=1.40.2",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
